# pnpl

./: .gitignore  CITATION.cff  README.md  pyproject.toml
pnpl/: __init__.py  __main__.py  num.txt  opcode.py  primality.py
samples/: hello.pn  pi.pn  sierpinski.pn  squares.pn
src/: __init__.py  __main__.py
