[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pnpl"
version = "0.1.0"
authors = [
  { name="Henry Díaz Bordón", email="henrydiazbordon@gmail.com" },
]
description = "Prime Number Programming Language, an esoteric language based on the fundamental theorem of arithmetic"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/h3nry-d1az/pnpl"
Issues = "https://github.com/h3nry-d1az/pnpl/issues"