[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pnpl"
version = "0.1.0"
description = "Prime Number Programming Language, an esoteric language based on the fundamental theorem of arithmetic"
authors = [
  { name="Henry Díaz Bordón", email="henrydiazbordon@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "py-getch" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
pnpl = "pnpl.__main__:main"

[project.urls]
Homepage = "https://esolangs.org/wiki/PNPL"
Issues = "https://github.com/h3nry-d1az/pnpl/issues"